--- a/UI/solutions-ui/src/index.html
+++ b/UI/solutions-ui/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en" class="body">
 <head>
   <meta charset="utf-8">
-  <title>SolutionsUi</title>
+  <title>Solutions</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
